# dvsktt-parser

./: .gitignore  pyproject.toml
data/: chinh-hoa-18.txt
plan/: parser-implementation-plan.md
plan/parser/: phase-1-preprocessing.md  phase-2-state-machine.md  phase-3-footnotes-serialization.md  phase-4-testing.md
src/dvsktt_parser/: cli.py  exporter.py  parser.py
src/dvsktt_parser/models/: blocks.py  document.py  notes.py  structure.py
tests/: test_parser.py
