[project]
name = "dvsktt-parser"
version = "0.1.0"
description = "Parser for Đại Việt Sử Ký Toàn Thư text into structured JSON"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "rich",
]

[project.scripts]
dvsktt = "dvsktt_parser.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
